# create_journal_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  ai-agent.md  dev-journal-spec-v2.5.md  pyproject.toml
src/journal/: collect_git.py  collect_sessions.py  config.py  dates.py  db.py  main.py  mask.py  paths.py  prompts.py  schema.py  summarize.py  tools.py  write.py
supabase/migrations/: 0001_init.sql  README.md
tests/: test_collect_git.py  test_collect_sessions.py  test_dates.py  test_db.py  test_mask.py  test_paths.py  test_summarize.py  test_tools.py  test_write.py
